@@ -19,3 +19,4 @@ v 0.0.1 (unreleased)
 * Added a settings page (jvanbaarsen)
 * FROM_EMAIL env var is deprecated. Set the from_emails on the setting page (jvanbaarsen)
 * Make SMTP configurable in the IC interface (jvanbaarsen)
+* Remember a login for 30 days (jvanbaarsen)
